set up basic template for play screen

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
             </div>
             <div class="action-row" id="action-row-2">
                 <div class="key-sequence" id="key-sequence-2"></div>
-                <div class="damage-points" id="damage-points-2"></div>
+                <div class="damage-points" id="damage-points-2">
+                    <p>Damage</p>
+                    <p>0</p>
+                </div>
             </div>
         </div>
     </main>
