updated game over screen and replay function

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
-    <main>
-        <div class="action-area hidden">
+    <div class="top"></div>
+    <div class="bottom">
+        <!-- <div class="action-area hidden">
             <div class="action-row" id="action-row-0">
                 <div class="key-sequence" id="key-sequence-0"></div>
                 <div class="damage-points" id="damage-points-0">
@@ -25,8 +25,8 @@
                     <p>0</p>
                 </div>
             </div>
-        </div>
-    </main>
+        </div> -->
+    </div>
     <script src="/app.js"></script>
 </body>
 </html>
