--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./fightingpotatoes/main.css" rel="stylesheet"/>
+    <link href="./main.css" rel="stylesheet"/>
     <title>Document</title>
 </head>
 <body>
@@ -27,6 +27,6 @@
             </div>
         </div> -->
     </div>
-    <script src="./fightingpotatoes/app.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
