add powerup (WIP)

--- a/index.html
+++ b/index.html
@@ -9,24 +9,8 @@
 </head>
 <body>
     <div class="top"></div>
-    <div class="bottom">
-        <!-- <div class="action-area hidden">
-            <div class="action-row" id="action-row-0">
-                <div class="key-sequence" id="key-sequence-0"></div>
-                <div class="damage-points" id="damage-points-0">
-                    <p>Damage</p>
-                    <p>0</p>
-                </div>
-            </div>
-            <div class="action-row" id="action-row-1">
-                <div class="key-sequence" id="key-sequence-1"></div>
-                <div class="damage-points" id="damage-points-1">
-                    <p>Damage</p>
-                    <p>0</p>
-                </div>
-            </div>
-        </div> -->
-    </div>
-    <script src="./app.js"></script>
+    <div class="bottom"></div>
+    <div class="powerupbg"></div>
 </body>
+<script src="./app.js"></script>
 </html>
