--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
     <div class="bottom"></div>
     <div class="powerupbg"></div>
 </body>
-<script src="./app.js"></script>
+<script src="./js/_globalVariables.js"></script>
+<script src="./js/generateHtml.js"></script>
+<script src="./js/potato.js"></script>
+<script src="./js/healthbar.js"></script>
+<script src="./js/powerup.js"></script>
+<script src="./js/app.js"></script>
+<script src="./js/specialEffects.js"></script>
 </html>
