--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="bottom"></div>
     <div class="powerupbg"></div>
 </body>
-<script src="./js/_globalVariables.js"></script>
+<script src="./js/globalVariables.js"></script>
 <script src="./js/generateHtml.js"></script>
 <script src="./js/potato.js"></script>
 <script src="./js/healthbar.js"></script>
